Added controllers, now interacts with db using entity framework dbContext and simple sqlCommands

--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -48,6 +48,10 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -61,6 +65,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Bank" connectionString="data source=(LocalDb)\v11.0;initial catalog=WebAPI.Models.Bank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BankDB" connectionString="data source=C:\Users\Lukas Kairys\Documents\Visual Studio 2013\Projects\WebAPI\WebAPI\App_Data\WebAPI.Models.BankContext.mdf;initial catalog=WebAPI;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
