Added controllers, now interacts with db using entity framework dbContext and simple sqlCommands and Db  file

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ WebAPI/degub/*
 WebAPI.Tests/bin/*
 WebAPI.Tests/debug/*
 WebAPI.Tests/obj/*
+WebAPI/Areas
 
-WebAPI\Migrations*/
+WebAPI/Migrations/*
