--- a/WebAPI/Web.config
+++ b/WebAPI/Web.config
@@ -52,6 +52,18 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -65,6 +77,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BankDB" connectionString="data source=C:\Users\Lukas Kairys\Documents\Visual Studio 2013\Projects\WebAPI\WebAPI\App_Data\WebAPI.Models.BankContext.mdf;initial catalog=WebAPI;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="BankDB" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Lukas Kairys\Documents\Visual Studio 2013\Projects\WebAPI\WebAPI\App_Data\WebAPI.Models.BankContext.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
