--- a/WebAPI/packages.config
+++ b/WebAPI/packages.config
@@ -17,7 +17,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="Swagger.Net" version="0.5.5" targetFramework="net45" />
-  <package id="WebActivator" version="1.5.1" targetFramework="net45" />
+  <package id="Swashbuckle" version="4.1.0" targetFramework="net45" />
+  <package id="Swashbuckle.Core" version="4.1.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
